# shift-invert

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ezsolver.hpp  shiftinvert_solver.hpp  timer.hpp
src/: CMakeLists.txt  ezsolver.cc  shiftinvert_solver.cc  timer.cc
test/: CMakeLists.txt  test_ezarpack.cc  test_main.cc  test_solver.cc
